--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,6 +25,7 @@ html, body {
   letter-spacing: .1em;
   text-align: center;
   font-family: 'courier_bold', courier;
+  font-size: 4vw
 }
 
 img {
