--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ html, body {
   letter-spacing: .1em;
   text-align: center;
   font-family: 'courier_bold', courier;
-  font-size: 4vw
+  font-size: 4vw;
 }
 
 img {
@@ -33,7 +33,7 @@ img {
   display: block;
   margin: 0 auto;
   max-height: 100%;
-  max-width: 30%;
+  max-width: 50%;
 }
 
 hr{
@@ -42,17 +42,19 @@ hr{
 }
 
 a:link{
-  color:black;
+  text-decoration: none;
+}
+
+a:link{
+  color:#009193;
 }
 
 a:visited{
-  color:black;
+  color:#009193;
 }
 
-
-
 a:hover{
-  color: #009193;
+  color: black;
 }
 
 
@@ -68,6 +70,11 @@ td, th {
   padding: 10px 20px;
 }
 
-textarea{width: 80%; font-family: courier; font-weight: bold;}
+textarea{width: 80%; font-family: courier; font-weight: bold; font-size: 3vw;}
+input{width: 80%; font-family: courier; font-weight: bold; font-size: 3vw;}
+button{width: 80%; font-family: courier; font-weight: bold; font-size: 5vw; color: white; background-color: gray;}
+button:hover{background-color: #009193;}
+
+
 .ti{width: 80%}
 table{border-collapse: collapse; border: 1px solid black; width:100%}
